# testing-node-rs

./: .gitignore  README.md
emp/: Cargo.toml  index.d.ts  index.js  main.mjs  package.json
emp/.github/workflows/: CI.yml
emp/npm/darwin-arm64/: README.md  package.json
emp/npm/darwin-x64/: README.md  package.json
emp/npm/linux-x64-gnu/: README.md  package.json
emp/npm/win32-x64-msvc/: README.md  package.json
emp/src/: lib.rs
